# oasis-gamemode

./: .clang-format  .devcontainer.json  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  build.sh  flake.nix
.github/workflows/: deployment.yaml
cmake/: conan.cmake  gettext_helpers.cmake
docker/: Makefile  docker-compose.devcontainer.yaml  docker-compose.devenv.arm64.yaml  docker-compose.yaml
docker/devcontainer/: Dockerfile
docker/devenv/: Dockerfile
docker/image/: Dockerfile  entrypoint.sh
docker/ubuntu-22.04/: Dockerfile
docker/ubuntu-23.10/: Dockerfile
docker/ubuntu-23.10-arm64/: Dockerfile  docker-entrypoint.sh
migrations/: 000_init.sql  20240206203147_init.down.sql  20240206203147_init.up.sql  20240704234502_rename_users_to_players.down.sql  20240704234502_rename_users_to_players.up.sql  20240705005515_player_stats.down.sql  20240705005515_player_stats.up.sql  20240714230637_add_x1_stats.down.sql  20240714230637_add_x1_stats.up.sql  20240808022409_add_duel_stats.down.sql  20240808022409_add_duel_stats.up.sql  20241005133145_pms.down.sql  20241005133145_pms.up.sql  20241008103423_player_settings.down.sql  20241008103423_player_settings.up.sql  20241114043441_add_notification_position.down.sql  20241114043441_add_notification_position.up.sql  20241117091206_add_damage_notification.down.sql  20241117091206_add_damage_notification.up.sql
nix/: conan.nix  default.nix
resources/sql/: create_player.sql  load_dm_stats_for_player.sql  load_duel_stats_for_player.sql  load_player.sql  load_player_settings.sql  load_x1_stats_for_player.sql  save_player.sql  save_player_settings.sql  update_dm_stats.sql  update_duel_stats.sql  update_x1_stats.sql
server/: .env.example  .gitignore  README.md  pawn.yaml
server/locale/: messages.pot
server/locale/po/: en.po  pt.po  ru.po
server/src/: oasis.pwn
src/: CMakeLists.txt  constants.hpp  main.cpp
src/core/: CoreManager.cpp  CoreManager.hpp  DialogManager.cpp  DialogManager.hpp  ModeManager.cpp  ModeManager.hpp  Player.hpp  PlayerData.hpp  PlayerTempData.hpp  PlayerVars.hpp  SQLQueryManager.cpp  SQLQueryManager.hpp
src/core/auth/: AuthController.cpp  AuthController.hpp  AuthHandler.cpp  AuthHandler.hpp  PlayerTempData.hpp  PlayerVars.hpp
src/core/commands/: CommandCallbackWrapper.hpp  CommandInfo.hpp  CommandManager.cpp  CommandManager.hpp
src/core/controllers/: PlayerOnFireController.cpp  PlayerOnFireController.hpp  SpeedometerController.cpp  SpeedometerController.hpp
src/core/dialogs/: DialogManager.cpp  DialogManager.hpp  DialogResult.hpp  Dialogs.cpp  Dialogs.hpp  IDialog.hpp
src/core/player/: AdminData.hpp  BanData.hpp  PlayerExtension.cpp  PlayerExtension.hpp  PlayerModel.hpp  PlayerSettings.hpp  PlayerTempData.hpp  TextDrawManager.cpp  TextDrawManager.hpp
src/core/settings/: SettingsStorage.hpp
src/core/textdraws/: CompatLayer.hpp  ITextDrawWrapper.hpp  Notification.cpp  Notification.hpp  ServerLogo.cpp  ServerLogo.hpp  Speedometer.cpp  Speedometer.hpp
src/core/utils/: Argon2idHash.hpp  Colors.hpp  Common.hpp  ConnectionPool.hpp  Events.hpp  Hash.hpp  IDPool.cpp  IDPool.hpp  LocaleUtils.hpp  Localization.cpp  Localization.hpp  PgTimestamp.cpp  PgTimestamp.hpp  QueryNames.hpp  Random.hpp  ServiceLocator.hpp  Strings.hpp  VehicleList.hpp  dotenv.h  iso_week.h
src/modes/: IMode.hpp  ModeBase.cpp  ModeBase.hpp  Modes.hpp
src/modes/deathmatch/: DeathmatchController.cpp  DeathmatchController.hpp  DeathmatchResult.hpp  DeathmatchStats.hpp  Maps.hpp  PlayerTempData.hpp  PlayerVars.hpp  Room.hpp  Room.tpp  WeaponSet.hpp  X1Controller.cpp  X1Controller.hpp  X1PlayerTempData.hpp  X1Stats.hpp
src/modes/deathmatch/textdraws/: DeathmatchTimer.cpp  DeathmatchTimer.hpp
src/modes/derby/: DerbyStats.hpp  PlayerTempData.hpp
src/modes/duel/: DuelController.cpp  DuelController.hpp  DuelOffer.hpp  DuelStats.hpp  Maps.hpp  PlayerTempData.hpp  Room.hpp  Room.tpp
src/modes/freeroam/: Freeroam.cpp  Freeroam.hpp  FreeroamController.cpp  FreeroamController.hpp  FreeroamVehicles.hpp  PlayerTempData.hpp  PlayerVars.hpp
src/modes/x1/: Room.hpp  Room.tpp  X1Controller.cpp  X1Controller.hpp  X1PlayerTempData.hpp  X1Stats.hpp
utils/: update_translations.sh
